k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-python-basic
  name: pipelines-python-basic
spec:
  port:
    targetPort: 8080-tcp
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge    
  to:
    kind: Service
    name: pipelines-python-basic
    weight: 100
